--- a/data-explorer/toc.yml
+++ b/data-explorer/toc.yml
@@ -1,8 +1,8 @@
-- name: Documentation Azure Data Explorer
+- name: Documentation de l’Explorateur de données Azure
   href: index.yml
 - name: Vue d’ensemble
   items:
-    - name: "Qu’est-ce qu’Azure Data Explorer\_?"
+    - name: "Qu’est-ce que l’Explorateur de données Azure\_?"
       href: data-explorer-overview.md
 - name: Démarrages rapides
   expanded: true
@@ -1572,53 +1572,53 @@
                 - name: Analyseur de code
                   href: ./kusto/tools/kusto-explorer-code-analyzer.md
             - name: Interface utilisateur web
-              href: 'https://docs.microsoft.com/azure/data-explorer/web-query-data'
+              href: ./web-query-data.md
             - name: Kusto.Cli
               href: ./kusto/tools/kusto-cli.md
         - name: 'Visualisations, tableaux de bord et création de rapports'
           items:
             - name: Azure Notebooks
-              href: 'https://docs.microsoft.com/azure/data-explorer/azure-notebooks'
+              href: ./azure-notebooks.md
             - name: Excel
               items:
                 - name: Requête vide Excel
-                  href: 'https://docs.microsoft.com/azure/data-explorer/excel-blank-query'
+                  href: ./excel-blank-query.md
                 - name: Connecteur Excel
-                  href: 'https://docs.microsoft.com/azure/data-explorer/excel-connector'
+                  href: ./excel-connector.md
             - name: Grafana
-              href: 'https://docs.microsoft.com/azure/data-explorer/grafana'
+              href: ./grafana.md
             - name: Power BI
               items:
                 - name: "Bonnes pratiques pour Power\_BI"
-                  href: 'https://docs.microsoft.com/azure/data-explorer/power-bi-best-practices'
+                  href: ./power-bi-best-practices.md
                 - name: "Connecteur Power\_BI"
-                  href: 'https://docs.microsoft.com/azure/data-explorer/power-bi-connector'
+                  href: ./power-bi-connector.md
                 - name: "Requête importée Power\_BI"
-                  href: 'https://docs.microsoft.com/azure/data-explorer/power-bi-imported-query'
+                  href: ./power-bi-imported-query.md
                 - name: Requête SQL Power BI
-                  href: 'https://docs.microsoft.com/azure/data-explorer/power-bi-sql-query'
+                  href: ./power-bi-sql-query.md
         - name: Orchestration
           items:
             - name: Microsoft Flow (préversion)
               items:
                 - name: "Connecteur Microsoft\_Flow"
-                  href: 'https://docs.microsoft.com/azure/data-explorer/flow'
+                  href: ./flow.md
                 - name: "Exemples d’utilisation du connecteur Microsoft\_Flow"
-                  href: 'https://docs.microsoft.com/azure/data-explorer/flow-usage'
+                  href: ./flow-usage.md
             - name: Microsoft Logic Apps (préversion)
               href: ./kusto/tools/logicapps.md
         - name: Ingestion de données
           items:
             - name: LightIngest
-              href: 'https://docs.microsoft.com/azure/data-explorer/lightingest'
+              href: ./lightingest.md
             - name: Connecteur Apache Spark
-              href: 'https://docs.microsoft.com/azure/data-explorer/spark-connector'
+              href: ./spark-connector.md
         - name: Intégration du contrôle de code source
           items:
             - name: Synchroniser Kusto
               href: ./kusto/tools/synckusto.md
             - name: Azure Pipelines/DevOps
-              href: 'https://docs.microsoft.com/azure/data-explorer/devops'
+              href: ./devops.md
 - name: Ressources
   items:
     - name: Blog
