--- a/data-explorer/toc.yml
+++ b/data-explorer/toc.yml
@@ -1,4 +1,4 @@
-- name: Documentation Azure Data Explorer
+- name: Documentation de l’Explorateur de données Azure
   href: index.yml
 - name: Vue d’ensemble
   items:
@@ -144,6 +144,8 @@
               href: machine-learning-clustering.md
     - name: Visualiser les données
       items:
+        - name: Tableaux de bord Azure Data Explorer
+          href: azure-data-explorer-dashboards.md
         - name: Power BI
           items:
             - name: Meilleures pratiques
@@ -1383,7 +1385,6 @@
         - name: Rôles de sécurité
           href: ./kusto/management/security-roles.md
         - name: Ingestion de données
-          href: ./kusto/management/data-ingestion/index.md
           items:
             - name: Ingestion à partir du stockage
               href: ./kusto/management/data-ingestion/ingest-from-storage.md
@@ -1438,8 +1439,6 @@
               href: ./kusto/management/access-control/role-based-authorization.md
             - name: "Procédure d’authentification\_AAD"
               href: ./kusto/management/access-control/how-to-authenticate-with-aad.md
-            - name: "Procédure de provisionnement d’une application\_AAD"
-              href: ./kusto/management/access-control/how-to-provision-aad-app.md
         - name: Gestion avancée des données
           items:
             - name: Vue d’ensemble des étendues (partitions de données)
