--- a/data-explorer/toc.yml
+++ b/data-explorer/toc.yml
@@ -196,6 +196,8 @@
               href: customer-managed-keys-csharp.md
             - name: "Modèle Azure\_Resource\_Manager"
               href: customer-managed-keys-resource-manager.md
+            - name: Azure CLI
+              href: customer-managed-keys-cli.md
         - name: Créez une application Azure AD
           href: provision-azure-ad-app.md
     - name: Gérer
