--- a/data-explorer/toc.yml
+++ b/data-explorer/toc.yml
@@ -329,6 +329,10 @@
               href: ./kusto/query/schema-entities/index.md
             - name: Noms d’entité
               href: ./kusto/query/schema-entities/entity-names.md
+            - name: Références d’entité
+              href: ./kusto/query/schema-entities/entity-references.md
+            - name: Bases de données
+              href: ./kusto/query/schema-entities/databases.md
             - name: Tables
               href: ./kusto/query/schema-entities/tables.md
             - name: Colonnes
@@ -363,6 +367,8 @@
               href: ./kusto/query/scalar-data-types/timespan.md
             - name: Valeurs Null
               href: ./kusto/query/scalar-data-types/null-values.md
+            - name: Types de données scalaires non pris en charge
+              href: /kusto/query/scalar-data-types/unsupported-data-types.md
         - name: Fonctions
           items:
             - name: Types de fonction
@@ -1256,6 +1262,8 @@
                   href: ./kusto/management/create-table-command.md
                 - name: .create tables
                   href: ./kusto/management/create-tables-command.md
+                - name: .create-merge tables
+                  href: ./kusto/management/create-merge-tables-command.md
                 - name: .drop table(s)
                   href: ./kusto/management/drop-table-command.md
                 - name: .rename table
