--- a/data-explorer/toc.yml
+++ b/data-explorer/toc.yml
@@ -414,37 +414,37 @@
               items:
                 - name: Plug-ins de l’opérateur evaluate
                   href: ./kusto/query/evaluateoperator.md
-                - name: autocluster
+                - name: 'autocluster, plug-in'
                   href: ./kusto/query/autoclusterplugin.md
-                - name: bag_unpack
+                - name: 'bag_unpack, plug-in'
                   href: ./kusto/query/bag-unpackplugin.md
-                - name: basket
+                - name: 'basket, plug-in'
                   href: ./kusto/query/basketplugin.md
-                - name: dcount_intersect
+                - name: 'dcount_intersect, plug-in'
                   href: ./kusto/query/dcount-intersect-plugin.md
-                - name: diffpatterns
+                - name: 'diffpatterns, plug-in'
                   href: ./kusto/query/diffpatternsplugin.md
-                - name: diffpatterns_text
+                - name: 'diffpatterns_text, plug-in'
                   href: ./kusto/query/diffpatterns-textplugin.md
-                - name: infer_storage_schema
+                - name: 'infer_storage_schema, plug-in'
                   href: ./kusto/query/inferstorageschemaplugin.md
-                - name: narrow
+                - name: 'narrow, plug-in'
                   href: ./kusto/query/narrowplugin.md
-                - name: pivot
+                - name: 'pivot, plug-in'
                   href: ./kusto/query/pivotplugin.md
-                - name: preview
+                - name: 'preview, plug-in'
                   href: ./kusto/query/previewplugin.md
-                - name: python
+                - name: 'python, plug-in'
                   href: ./kusto/query/pythonplugin.md
-                - name: R
+                - name: 'R, plug-in'
                   href: ./kusto/query/rplugin.md
-                - name: rolling_percentile
+                - name: 'rolling_percentile, plug-in'
                   href: ./kusto/query/rolling-percentile-plugin.md
-                - name: schema_merge
+                - name: 'schema_merge, plug-in'
                   href: ./kusto/query/schemamergeplugin.md
-                - name: sql_request
+                - name: 'sql_request, plug-in'
                   href: ./kusto/query/sqlrequestplugin.md
-                - name: sequence_detect
+                - name: 'sequence_detect, plug-in'
                   href: ./kusto/query/sequence-detect-plugin.md
             - name: opérateur extend
               href: ./kusto/query/extendoperator.md
@@ -1060,10 +1060,6 @@
               href: ./kusto/query/rownumberfunction.md
             - name: row_window_session()
               href: ./kusto/query/row-window-session-function.md
-        - name: Agrégations des fenêtres dynamiques
-          items:
-            - name: rolling_percentile()
-              href: ./kusto/query/rolling-percentile-plugin.md
         - name: Analyse de série chronologique
           items:
             - name: Vue d’ensemble de l’analyse des séries chronologiques
@@ -1132,13 +1128,13 @@
               href: ./kusto/query/series-subtractfunction.md
         - name: Machine Learning
           items:
-            - name: autocluster
+            - name: 'autocluster, plug-in'
               href: ./kusto/query/autoclusterplugin.md
-            - name: basket
+            - name: 'basket, plug-in'
               href: ./kusto/query/basketplugin.md
-            - name: diffpatterns
+            - name: 'diffpatterns, plug-in'
               href: ./kusto/query/diffpatternsplugin.md
-            - name: diffpatterns_text
+            - name: 'diffpatterns_text, plug-in'
               href: ./kusto/query/diffpatterns-textplugin.md
         - name: Géospatial
           items:
@@ -1160,27 +1156,27 @@
               href: ./kusto/query/geo-s2cell-to-central-point-function.md
             - name: geo_polygon_to_s2cells()
               href: kusto/query/geo-polygon-to-s2cells-function.md
-        - name: Analyse des utilisateurs
+        - name: Analytique des utilisateurs
           items:
-            - name: Plug-ins de l’analytique des utilisateurs
+            - name: Plug-ins d’analytique des utilisateurs
               href: ./kusto/query/useranalytics.md
-            - name: Nombre d’utilisateurs actifs
+            - name: 'Nombre d’utilisateurs actifs, plug-in'
               href: ./kusto/query/active-users-count-plugin.md
-            - name: 'Métriques sur le nombre d’activités (valeurs totales, valeurs distinctes, nouvelles valeurs)'
+            - name: 'Métriques des nombres d’activités, plug-in'
               href: ./kusto/query/activity-counts-metrics-plugin.md
-            - name: 'Engagement des activités (UAQ, WAU, UAM)'
+            - name: 'Engagement des activités, plug-in'
               href: ./kusto/query/activity-engagement-plugin.md
-            - name: 'Métriques sur les activités (conservation, évolution, nouvelles valeurs)'
+            - name: 'Métriques des activités, plug-in'
               href: ./kusto/query/activity-metrics-plugin.md
-            - name: 'Métriques sur les activités - Nouveau (conservation, évolution, nouvelles valeurs)'
+            - name: 'Métriques des activités, plug-in - Nouveau'
               href: ./kusto/query/new-activity-metrics-plugin.md
-            - name: Achèvement de la séquence d’entonnoir
+            - name: 'Réalisation de séquence d’entonnoir, plug-in'
               href: ./kusto/query/funnel-sequence-completion-plugin.md
-            - name: Séquence d’entonnoir
+            - name: 'Séquence d’entonnoir, plug-in'
               href: ./kusto/query/funnel-sequence-plugin.md
-            - name: Nombre de sessions
+            - name: 'Nombre de sessions, plug-in'
               href: ./kusto/query/session-count-plugin.md
-            - name: Nombre de fenêtres glissantes
+            - name: 'Nombre de fenêtres glissantes, plug-in'
               href: ./kusto/query/sliding-window-counts-plugin.md
         - name: Documentation de référence sur le langage de requête Kusto
           items:
