--- a/data-explorer/index.yml
+++ b/data-explorer/index.yml
@@ -9,12 +9,12 @@ metadata:
   author: orspod
   ms.author: orspodek
   ms.date: 03/19/2020
-  ms.openlocfilehash: a685cc0f12d86534274e4c4aaff87587885db572
-  ms.sourcegitcommit: 47a002b7032a05ef67c4e5e12de7720062645e9e
+  ms.openlocfilehash: e9e434423919643e75dd7c90c60ae3c90072283f
+  ms.sourcegitcommit: e093e4fdc7dafff6997ee5541e79fa9db446ecaa
   ms.translationtype: HT
   ms.contentlocale: fr-FR
-  ms.lasthandoff: 04/15/2020
-  ms.locfileid: "81490580"
+  ms.lasthandoff: 07/01/2020
+  ms.locfileid: "85763906"
 landingContent:
 - title: À propos d’Azure Data Explorer
   linkLists:
@@ -26,6 +26,8 @@ landingContent:
     links:
     - text: Qu’est-ce que l’Explorateur de données Azure ? (19:47)
       url: https://youtu.be/D_AJk2lAepw
+    - text: 'Pluralsight : How to Start with Microsoft Azure Data Explorer'
+      url: https://www.pluralsight.com/courses/microsoft-azure-data-explorer-starting
     - text: 'Pluralsight : Les bases du langage de requête Kusto (KQL)'
       url: https://www.pluralsight.com/courses/kusto-query-language-kql-from-scratch
 - title: Créer un cluster et une base de données
