--- a/data-explorer/toc.yml
+++ b/data-explorer/toc.yml
@@ -70,9 +70,9 @@
           items:
             - name: Vue d’ensemble de l’ingestion en un clic
               href: ingest-data-one-click.md
-            - name: Ingestion en un clic dans une nouvelle table
+            - name: Données CSV d’un conteneur à une nouvelle table
               href: one-click-ingestion-new-table.md
-            - name: Ingestion en un clic dans une table existante
+            - name: Données JSON d’un fichier local à une table existante
               href: one-click-ingestion-existing-table.md
         - name: Ingestion de streaming
           items:
@@ -1486,7 +1486,21 @@
             - name: Vue d’ensemble des étendues (partitions de données)
               href: ./kusto/management/extents-overview.md
             - name: Commandes d’étendues
-              href: ./kusto/management/extents-commands.md
+              items:
+                - name: .alter extent
+                  href: ./kusto/management/alter-extent.md
+                - name: .drop extents
+                  href: ./kusto/management/drop-extents.md
+                - name: .drop extent tags
+                  href: ./kusto/management/drop-extent-tags.md
+                - name: .merge extents
+                  href: ./kusto/management/merge-extents.md
+                - name: .move extents
+                  href: ./kusto/management/move-extents.md
+                - name: .replace extents
+                  href: ./kusto/management/replace-extents.md
+                - name: .show extents
+                  href: ./kusto/management/show-extents.md
             - name: Abonné aux clusters
               href: ./kusto/management/cluster-follower.md
             - name: Vidage des données
