--- a/data-explorer/toc.yml
+++ b/data-explorer/toc.yml
@@ -204,8 +204,12 @@
               href: vnet-deployment.md
             - name: 'Résoudre les problèmes liés à la création, à la connectivité et au fonctionnement d’un cluster de réseaux virtuels'
               href: vnet-deploy-troubleshoot.md
-        - name: Gérer la sécurité des clusters
-          href: manage-cluster-security.md
+        - name: Chiffrement
+          items:
+            - name: Chiffrement de disque de cluster - portail
+              href: cluster-disk-encryption.md
+            - name: Double chiffrement
+              href: double-encryption.md
         - name: Configurer des identités managées
           href: managed-identities.md
         - name: Configurer des clés gérées par le client
